<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="pe.financieraoh.projects.com.appfinancieraoh.presentation.viewmodel.register.RegisterViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.RegisterActivity">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tviTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/s_register"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tviName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/s_name"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/eteName"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/eteName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tviName"
            app:layout_constraintTop_toBottomOf="@+id/tviTitle" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tviLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/s_last_name"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/eteLastName"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/eteLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tviLastName"
            app:layout_constraintTop_toBottomOf="@+id/tviName" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tviAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/s_age"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/eteAge"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/eteAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tviAge"
            app:layout_constraintTop_toBottomOf="@+id/tviLastName" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tviBirthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/s_birthday"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/eteBirthday"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/eteBirthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:cursorVisible="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tviBirthday"
            app:layout_constraintTop_toBottomOf="@+id/tviAge" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/butRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:enabled="@{viewModel.enabledRegisterButton}"
            android:onClick="@{() -> viewModel.onClick()}"
            android:text="@string/s_register_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>
